# My_Email_Tracker

./: .gitignore  00_START_HERE_DEPLOYMENT.md  DATA_FLOW.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICK_VISUAL.txt  DEPLOYMENT_SUMMARY.md  MANIFEST.md  README.md  README_DEPLOYMENT_READY.md  REFACTORING_SUMMARY.md  deploy.sh  render.yaml  test.txt  verify_deployment.py
backend/: email_tracker.db  pyproject.toml  requirements.txt  test.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: __init__.py  ai_email.py  config.py  resume.py
backend/app/core/: config.py  database.py  utils.py
backend/app/models/: __init__.py  campaign.py  contact.py  email_template.py  resume.py
backend/app/schemas/: email.py  resume.py
backend/app/services/: ai_service.py  email_service.py  reply_service.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: apiClient.js  database_service.js  email_service.js
frontend/src/components/: AIPrompt.jsx  CampaignHistory.jsx  ContactUpload.jsx  EmailPreview.jsx  EmailTemplates.jsx  HRTable.jsx  ResumesTab.jsx  SetupPage.jsx  Toast.jsx
frontend/src/hooks/: useErrorHandler.js
